# quasim-cli

./: .gitmodules  Cargo.toml  README.md  package.json
crates/backend/: Cargo.toml  build.rs
crates/backend/src/: api.rs  circuit_parse.rs  lib.rs  util.rs  web_server.rs
crates/backend/src/api/: debug.rs  debug_session.rs  types.rs
crates/backend/src/api/debug/: session.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
src/: App.tsx
src/circuit-builder/: constants.ts  types.ts
src/circuit-builder/components/: AppHeader.tsx  CircuitCanvas.tsx  DragGhost.tsx  HeaderControls.tsx  PalettePanel.tsx  StatusBar.tsx
src/circuit-builder/components/canvas/: CanvasElements.tsx  CanvasWires.tsx  DropPreviewOverlay.tsx  selection.ts
src/circuit-builder/components/modals/: AssignModal.tsx  ClassicalRegisterModal.tsx  ConditionModal.tsx  CustomGateModal.tsx  ExpressionEditorModal.tsx  JumpModal.tsx  ModalFrame.tsx  ParameterModal.tsx
src/circuit-builder/hooks/: editorHelpers.ts  useCircuitEditor.ts
src/circuit-builder/utils/: analysis.ts  circuit.ts  conditions.ts  customGates.ts  layout.ts  serialization.ts
web/circuit-builder/: index.html  package-lock.json  package.json
web/circuit-builder/src/: App.tsx  index.css
web/circuit-builder/src/circuit-builder/: constants.ts  types.ts
web/circuit-builder/src/circuit-builder/components/: AppHeader.tsx  CircuitCanvas.tsx  DebugValueTrackerPanel.tsx  DockPanel.tsx  HeaderControls.tsx  PalettePanel.tsx  StateVectorPlot.tsx  StatusBar.tsx
web/circuit-builder/src/circuit-builder/hooks/: circuitEditorTypes.ts  editorHelpers.ts  useCircuitDocumentState.ts  useCircuitEditor.ts  useCircuitEditorCommands.ts  useCircuitEditorSelectors.ts  useCircuitUiState.ts
(+15 files in other folders)
