[package]
name = "quasim-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "quasim-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
quasim-backend = { path = "../backend" }
quasim = { path = "../simulator" }
tokio.workspace = true
webbrowser.workspace = true
